--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- Logo -->
             <div class="col-md-4">
                 <div class="logoimg d-flex align-items-center">
-                    <img src="../img/logodesign-for-medical.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="img/logodesign-for-medical.jpg" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
             <!-- Form -->
