--- a/signup.html
+++ b/signup.html
@@ -18,7 +18,7 @@
             <!-- Logo -->
             <div class="col-sm-4">
                 <div class="logoimg d-flex align-items-center">
-                    <img src="../img/logodesign-for-medical.jpg" class="img-fluid" alt="Responsive image">
+                    <img src="img/logodesign-for-medical.jpg" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
             <!-- Form -->
